# PROJETO_FPGA

./: .gitignore  README.md
01.RP2040/: CMakeLists.txt
01.RP2040/freertos_config/: FreeRTOSConfig.h
01.RP2040/inc/: usb_task.h
01.RP2040/src/: main.c  main_glitch.c  main_integridade.c  main_oversampling.c  usb_task.c
01.RP2040/src/led/: main.c
01.RP2040/src/ota/: main.c
02.FPGA/: blink.config  blink.json  blink_test  circuit-1.digitaljs  hardware.config  hardware.json  hardware_check.config  hardware_check.json  log_flash_btled.txt  log_flash_led.txt  log_flash_menu.txt  log_flash_menu_led.txt  log_nextpnr_20260208_1114.txt  log_nextpnr_20260213_1428.txt  log_nextpnr_20260213_1436.txt  log_nextpnr_20260218_1641.txt  log_nextpnr_20260218_1647.txt  log_nextpnr_20260218_1736.txt  log_nextpnr_20260218_1741.txt  log_nextpnr_20260227_1323.txt  log_openFPGALoader_20260208_1114.txt  log_openFPGALoader_20260213_1428.txt  log_openFPGALoader_20260213_1436.txt  log_yosys_20260208_1114.txt  log_yosys_20260213_1428.txt  log_yosys_20260213_1436.txt  log_yosys_20260218_1641.txt  log_yosys_20260218_1647.txt  log_yosys_20260218_1736.txt  log_yosys_20260218_1741.txt  log_yosys_20260227_1323.txt  soc_bootloader  teste_sintaxe  teste_sistema
02.FPGA/hdl/: blink.v  pins.lpf  pins0.lpf  servo2.sv  soc_memory.v  spi_slave.sv  tb_bootloader.sv  tb_filtro.sv  tb_integridade.sv  top.sv  top_SPI.sv.bak  top_filtro.sv  top_integridade.sv  top_led.sv  top_oversampling.sv  top_servo_pwm_test.sv  top_servo_test2.sv  top_soc.sv  top_spi_test.sv.bak
02.FPGA/hdl/led/: servo.sv  system_top.sv  top_led_0.sv  top_led_1.sv  top_servo_test.sv
02.FPGA/hdl/ota/: ecp5_multiboot.sv  ecp5_reboot.sv  spi_slave.sv  system_complete.sv  system_top.sv  system_top_0.sv
02.FPGA/hdl/servo/: system_top.sv  top_servo_pwm_0.sv  top_servo_pwm_1.sv  top_servo_pwm_2.sv
02.FPGA/sim/: simulacao_spi  tb_blink.v  tb_spi_slave.sv  tbservo.sv
02.FPGA/sim/ota/: tb_bootloader.sv
02.FPGA/sim/oversampling/: tb_oversampling.sv
02.FPGA/sim/servo/: tbservo.sv
03.Firmware/: bootloader.s  firmware.c  sections.lds
04.Docs/evidencias/: .$cross.drawio.bkp  cross.drawio  esquema.drawio  sequencia.drawio
